# cmake-develop-flow

./: .gitignore  vs code开发跨平台c++应用流程.md
core/test_dynamic_lib/: CMakeLists.txt  common.h  function.h
core/test_static_lib/: CMakeLists.txt  function_static.cpp
test_app1/: CMakeLists.txt  CMakePresets.json
test_app1/test_lib1/: CMakeLists.txt  test_lib1.cpp  test_lib1.h
test_app1/test_program1/: CMakeLists.txt  main.cpp
test_app2/: CMakeLists.txt  CMakePresets.json
test_app2/test_lib2/: CMakeLists.txt  test_lib2.cpp  test_lib2.h
test_app2/test_program2/: CMakeLists.txt  main.cpp
